Fix an issue where macros text in dark theme would be hard to read

--- a/css/themes/dark-theme.css
+++ b/css/themes/dark-theme.css
@@ -249,7 +249,7 @@
   background: #121212;
 }
 
-.dark-theme textarea {
+.dark-theme .actor.sheet textarea, .dark-theme .item.sheet textarea {
   color: #FFF;
 }
 
